Fix footer spacings

--- a/css/theme.css
+++ b/css/theme.css
@@ -15881,6 +15881,11 @@ body.page-template-right-sidebarpage .wp-block-media-text__content {
   border-color: black;
 }
 
+#page-wrapper {
+  margin: 1em 0;
+  padding: 1.5em 0;
+}
+
 .page-template-right-sidebarpage .row {
   gap: 2em;
 }
@@ -15890,6 +15895,10 @@ body.page-template-right-sidebarpage .wp-block-media-text__content {
 }
 .page-template-right-sidebarpage .row #right-sidebar {
   flex: 1 1 0;
+}
+
+#wrapper-footer {
+  padding: 0;
 }
 
 :root {
