--- a/src/sass/assets/cppmoderno/_right-sidebar-page.scss
+++ b/src/sass/assets/cppmoderno/_right-sidebar-page.scss
@@ -1,3 +1,8 @@
+#page-wrapper {
+    margin: 1em 0;
+    padding: 1.5em 0;
+}
+
 .page-template-right-sidebarpage {
     .row {
         gap: 2em;
